--- a/source/index.html
+++ b/source/index.html
@@ -101,7 +101,9 @@
           <p>Замените один-два приема обычной еды на наше функциональное питание.</p>
         </li>
         <li class="how-it-works-item how-it-works-item--time">
-          <p> Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+          <p>Уже через месяц наслаждайтесь
+            изменениями к лучшему <br>
+            вашего питомца!</p>
       </ul>
     </section>
 
